--- a/css/style.css
+++ b/css/style.css
@@ -58,8 +58,9 @@ footer {
 
 .wrapper {
     max-width: 120rem;
-    margin: 0 auto;
+    margin: 1 auto;
     width: 100%;
+    border: 0px solid red;
 }
 
 button {
@@ -86,12 +87,6 @@ button {
     background-color: #1251aa;
 }
 
-.button:disabled {
-    background-color: #9ca3af;
-    cursor: default;
-    pointer-events: none;
-}
-
 .pill-button {
     font-size: 2rem;
     font-weight: 700;
@@ -100,18 +95,18 @@ button {
 }
 
 .banner {
-    background-color: cfe5ff;
+    background-color: #cfe5ff;
     height: 540px;
     display: flex;
     align-items: center;
     background-repeat: no-repeat;
-    background-position: 80% bottom;
+    background-position: 50% bottom;
     background-size: 55%;
 }
 
 #hero {
     background-image: url("../images/panda.svg");
-}
+} 
 
 #features {
     padding-bottom: 138px;
